k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: mittag-ingress
  namespace: mittag
spec:
  rules:
  - host: mittag.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mittag-app-service
            port: 
              number: 80
  tls:
  - hosts:
    - mittag.tino.sh
    secretName: mittag-tino-sh-tls
